import { addIngredient, getAllIngredients } from './ingredients';
import { getDatabase } from './index';

export const DEFAULT_INGREDIENTS = {
  proteins: [
    { name: 'Milk', category: 'protein' as const, mealTypes: ['breakfast' as const] },
    { name: 'Greek Yogurt', category: 'protein' as const, mealTypes: ['breakfast' as const] },
    { name: 'Normal Yogurt', category: 'protein' as const, mealTypes: ['breakfast' as const] },
    {
      name: 'Butter',
      category: 'protein' as const,
      mealTypes: ['breakfast' as const, 'snack' as const],
    },
    {
      name: 'Cheese',
      category: 'protein' as const,
      mealTypes: ['breakfast' as const, 'snack' as const],
    },
    { name: 'Eggs', category: 'protein' as const, mealTypes: ['breakfast' as const] },
  ],
  carbs: [
    { name: 'Cereals', category: 'carb' as const, mealTypes: ['breakfast' as const] },
    {
      name: 'Pão Branco',
      category: 'carb' as const,
      mealTypes: ['breakfast' as const, 'snack' as const],
    },
    {
...
      category: 'carb' as const,
      mealTypes: ['breakfast' as const, 'snack' as const],
    },
  ],
  sweets: [
    {
      name: 'Jam',
      category: 'sweet' as const,
      mealTypes: ['breakfast' as const, 'snack' as const],
    },
    {
      name: 'Marmelada',
      category: 'sweet' as const,
...
