...
  "date": {
    "today": "Today",
    "yesterday": "Yesterday"
  },
  "filter": {
    "all": "All",
    "favorites": "Favorites"
  }
}

